--- a/NBi.Core/packages.config
+++ b/NBi.Core/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Antlr4.StringTemplate" version="4.0.6.9004" targetFramework="net40" />
   <package id="ncalc" version="1.3.8" targetFramework="net40" />
+  <package id="Samossas" version="1.0.0" targetFramework="net45" />
 </packages>
