--- a/NBi.Core/NBi.Core.csproj
+++ b/NBi.Core/NBi.Core.csproj
@@ -109,6 +109,11 @@
     <Compile Include="Etl\IntegrationService\EtlDtsRunner.cs" />
     <Compile Include="Etl\IntegrationService\EtlDtsSqlServerRunner.cs" />
     <Compile Include="Etl\IPackageEvents.cs" />
+    <Compile Include="Fake\IFakeInstance.cs" />
+    <Compile Include="Fake\UserDefinedFunctionFake.cs" />
+    <Compile Include="Fake\ViewFake.cs" />
+    <Compile Include="Fake\StoredProcedureFake.cs" />
+    <Compile Include="Fake\FakeManager.cs" />
     <Compile Include="FileManipulation\FileManipulationFactory.cs" />
     <Compile Include="FileManipulation\IFileManipulationFactory.cs" />
     <Compile Include="FileManipulation\IFileManipulationCommand.cs" />
@@ -367,6 +372,7 @@
     <EmbeddedResource Include="Report\ReportServerListSharedDataSet.sql" />
     <EmbeddedResource Include="Report\ReportServerQueryFromSharedDataSet.sql" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
