Add Sql Server Service Name to the configuration

--- a/NBi.Testing/ConnectionString.config
+++ b/NBi.Testing/ConnectionString.config
@@ -27,5 +27,9 @@
 	  name="IntegrationServerDatabase"
 	  connectionString=".\SQL2014"
 	/>
+  <add
+	  name="ServiceSqlServer"
+	  connectionString="mssql$SQL2012"
+	/>
 
 </connectionStrings>
