Move GenerationState to a new namespace and replace TemplateManager by TemplateState

--- a/NBi.UI.Genbi/NBi.UI.Genbi.csproj
+++ b/NBi.UI.Genbi/NBi.UI.Genbi.csproj
@@ -146,7 +146,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Interface\RunnerConfig\IRunnerConfigView.cs" />
-    <Compile Include="Stateful\TestSuiteState.cs" />
+    <Compile Include="Stateful\ApplicationState.cs" />
     <Compile Include="View\AboutBox.cs">
       <SubType>Form</SubType>
     </Compile>
