Create a class to provide helpful functions for serialize and deserialize

--- a/NBi.Services/NBi.Service.csproj
+++ b/NBi.Services/NBi.Service.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Dto\Style.cs" />
     <Compile Include="Operator.cs" />
     <Compile Include="RunnerConfig\AbstractRunnerConfigBuilder.cs" />
+    <Compile Include="Serializer.cs" />
     <Compile Include="TestCaseCollectionManager.cs" />
     <Compile Include="TestCaseManager.cs" />
     <Compile Include="Dto\Test.cs" />
