Adapt code to manage the actions on a suite directly in genbiL

--- a/NBi.Testing/NBi.Testing.csproj
+++ b/NBi.Testing/NBi.Testing.csproj
@@ -188,6 +188,8 @@
     <Compile Include="Unit\GenbiL\Action\Settings\DefaultActionTest.cs" />
     <Compile Include="Unit\GenbiL\Action\Settings\ParallelizeQueriesActionTest.cs" />
     <Compile Include="Unit\GenbiL\Action\Settings\ReferenceActionTest.cs" />
+    <Compile Include="Unit\GenbiL\Action\Suite\SaveSuiteActionTest.cs" />
+    <Compile Include="Unit\GenbiL\Action\Suite\IncludeSuiteActionTest.cs" />
     <Compile Include="Unit\GenbiL\Stateful\TestCaseSetCollectionTest.cs" />
     <Compile Include="Unit\GenbiL\Action\Template\ListPredefinedTeamplateActionTest.cs" />
     <Compile Include="Unit\GenbiL\Action\Template\LoadPredefinedTemplateActionTest.cs" />
