--- a/NBi.Testing/NBi.Testing.csproj
+++ b/NBi.Testing/NBi.Testing.csproj
@@ -169,6 +169,8 @@
     <Compile Include="Unit\Core\Query\QueryEngineFactoryTest.cs" />
     <Compile Include="Unit\Core\Report\FileParserTest.cs" />
     <Compile Include="Unit\Core\ResultSet\Comparer\CellComparerTest.cs" />
+    <Compile Include="Unit\Core\ResultSet\Comparer\TableComparerTest.cs" />
+    <Compile Include="Unit\Core\ResultSet\Converter\TableConverterTest.cs" />
     <Compile Include="Unit\Core\ResultSet\JsonResultSetTest.cs" />
     <Compile Include="Unit\Core\ResultSet\KeyCollectionTest.cs" />
     <Compile Include="Unit\Core\ResultSet\Comparer\BooleanComparerTest.cs" />
