Implementation of RestEngine with a Client and a basic Parser

--- a/NBi.Core/packages.config
+++ b/NBi.Core/packages.config
@@ -4,4 +4,5 @@
   <package id="Antlr4.StringTemplate" version="4.0.6.9004" targetFramework="net40" />
   <package id="Microsoft.AnalysisServices.AdomdClient" version="12.0.2000.8" targetFramework="net45" />
   <package id="NCalc-Edge" version="1.4.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
 </packages>
