--- a/NBi.Core/NBi.Core.csproj
+++ b/NBi.Core/NBi.Core.csproj
@@ -59,6 +59,10 @@
     <Reference Include="NCalc">
       <HintPath>..\packages\NCalc-Edge.1.4.3\lib\NCalc.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
@@ -255,6 +259,13 @@
     <Compile Include="Report\SharedDatasetRequest.cs" />
     <Compile Include="Report\DatasetRequest.cs" />
     <Compile Include="Report\ReportCommand.cs" />
+    <Compile Include="Rest\ContentType.cs" />
+    <Compile Include="Rest\CredentialsType.cs" />
+    <Compile Include="Rest\IRestClient.cs" />
+    <Compile Include="Rest\JsonRestClient.cs" />
+    <Compile Include="Rest\RestEngine.cs" />
+    <Compile Include="Rest\RestClientFactory.cs" />
+    <Compile Include="Rest\UriParametersBuilder.cs" />
     <Compile Include="ResultSet\Comparer\ComparerFactory.cs" />
     <Compile Include="Report\DatabaseParser.cs" />
     <Compile Include="Report\FileParser.cs" />
