--- a/NBi.Testing/NBi.Testing.csproj
+++ b/NBi.Testing/NBi.Testing.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Integration\Core\Query\QueryOdbcEngineTest.cs" />
     <Compile Include="Integration\Core\Query\QueryOleDbEngineTest.cs" />
     <Compile Include="Integration\Core\Query\QuerySqlEngineTest.cs" />
+    <Compile Include="Integration\Core\Rest\RestEngineTest.cs" />
     <Compile Include="Integration\GenbiL\Action\ActionTest.cs" />
     <Compile Include="Integration\SqlServer\IntegrationService\EtlDtsWindowsRunnerTest.cs" />
     <Compile Include="Integration\SqlServer\IntegrationService\EtlFileRunnerTest.cs" />
@@ -168,6 +169,9 @@
     <Compile Include="Unit\Core\Query\DbTypeBuilderTest.cs" />
     <Compile Include="Unit\Core\Query\QueryEngineFactoryTest.cs" />
     <Compile Include="Unit\Core\Report\FileParserTest.cs" />
+    <Compile Include="Unit\Core\Rest\JsonRestClientTest.cs" />
+    <Compile Include="Unit\Core\Rest\RestClientFactoryTest.cs" />
+    <Compile Include="Unit\Core\Rest\UriParametersBuilderTest.cs" />
     <Compile Include="Unit\Core\ResultSet\KeyCollectionTest.cs" />
     <Compile Include="Unit\Core\ResultSet\Comparer\BooleanComparerTest.cs" />
     <Compile Include="Unit\Core\ResultSet\Comparer\DateTimeRoundingTest.cs" />
